# MeshSimplification

./: .gitignore  CMakeLists.txt  install_dependency.bat
include/: Application.h  Camera.h  Context.h  GLPanel.h  LeastSquareMesh.h  MainFrame.h  Matrix.h  OpenMeshDef.h  PhongShadingPipeline.h  Pipeline.h  PipelineFactory.h  Simplification.h  Skeleton.h  Vec.h
resource/shader/local_shading/: mesh.fs
src/: Camera.cpp  Context.cpp  GLPanel.cpp  LeastSquareMesh.cpp  MainFrame.cpp  OpenMeshDef.cpp  PhongShadingPipeline.cpp  Pipeline.cpp  Simplification.cpp  Skeleton.cpp  main.cpp
